--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
+    "unauthorized": "^0.1.0",
     "validator": "^13.11.0"
   }
 }
