--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,6 @@
 {
-  "extends": ["airbnb-base", "google", "plugin:react/recommended"],
-  "ignorePatterns": ["temp.js", "**/vendor/*.js"],
+  "extends": ["airbnb-base"],
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }]
-  },
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "overrides": [
-    {
-      "env": {
-        "node": true
-      },
-      "files": [".eslintrc.{js,cjs}"],
-      "parserOptions": {
-        "sourceType": "script"
-      }
-    }
-  ],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["react"]
+  }
 }
