--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "body-parser": "^1.20.2",
     "eslint": "^8.51.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "nodemon": "^3.0.1"
   },
   "scripts": {
     "start": "node app.js",
@@ -28,15 +31,12 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
-    "nodemon": "^3.0.1",
     "unauthorized": "^0.1.0",
     "validator": "^13.11.0"
   }
